refactor: flow service
